# umbf-convert

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  check.cpp  check.hpp  convert.cpp  convert.hpp  extract.cpp  extract.hpp  image.umia  main.cpp  setup.sh  show.cpp  show.hpp
app/: app.cpp  app.hpp
models/: asset.cpp  asset.hpp  jsonbase.cpp  jsonbase.hpp  umbf.cpp  umbf.hpp
src/: convert.cpp  convert.hpp  extract.cpp  extract.hpp  main.cpp  show.cpp
src/models/: jsonbase.cpp  jsonbase.hpp  umbf.cpp  umbf.hpp
tests/: CMakeLists.txt
tests/data/: library_embedded.json.in  library_targeted.json.in  material_color.json.in  material_embedded.json.in  material_targeted.json.in  scene_embedded.json.in  scene_meshonly.json.in  scene_targeted.json.in  target_library.json.in  target_material.json.in  target_scene.json.in  target_texture.json.in  texture.json.in
